--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "helmet_server",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "express": "^4.16.3",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
-  },
-  "devDependencies": {
-    "concurrently": "^3.5.1",
-  }
+  "name": "helmet_server_express",
+  "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+  },
+  "dependencies": {
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "concurrently": "^3.5.0"
   }
 }
+
