--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
+    "react-grid-gallery": "^0.4.11",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -14,5 +14,9 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5001/"
+  "proxy": "http://localhost:5001/",
+  "devDependencies": {
+    "bootstrap": "^4.1.1",
+    "react-bootstrap": "^0.32.1"
+  }
 }
